--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 2rem;
+    margin-top: 1.25rem;
     font-family: "Lato", sans-serif;
     background: url("../img/bone_icon.svg") repeat;
     background-color: var(--background);
@@ -29,7 +29,7 @@ body {
 h1 {
     font-family: "Comic Neue", cursive;
     font-size: 2.5rem;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 h2 {
@@ -61,6 +61,8 @@ figure {
 .copyright {
     background-color: white;
     padding: 5px;
+    border-radius: 5px;
+    margin-bottom: 5px;
 }
 
 .content-wrapper {
@@ -71,7 +73,7 @@ figure {
     width: 900px;
     background-color: var(--main);
     padding: 20px 0 40px 0;
-    border-radius: 5px;
+    border-radius: 10px;
 }
 
 /* === Intro section styles === */
@@ -84,10 +86,11 @@ figure {
 .main-img {
     width: 550px;
     border-radius: 5px;
+    margin-top: 10px;
 }
 
 .reset {
-    margin-top: 0;
+    margin-top: 10px;
 }
 
 /* === Pick a Pup section styles === */
@@ -109,8 +112,10 @@ label {
 }
 
 select {
+    font-size: 1.1rem;
     margin-bottom: 20px;
     border-radius: 5px;
+    padding: 3px;
 }
 
 /* === Dog Display Styles === */
@@ -134,23 +139,45 @@ h2.name {
     box-shadow: 0 0 0 5px rgba(250,250,250);
     margin-top: 32px;
     margin-bottom: 12px;
+    height: 250px;
+    width: 250px;
 }
 
-.energy-heading {
+.energy-heading,
+.size-heading {
     font-weight: bold;
     margin-bottom: 20px;
 }
 
-.energy-level {
+.energy-level,
+.size {
     font-weight: normal;
 }
 
 .description-heading {
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 6px;
 }
 
 .description {
     margin: 0;
     line-height: 1.75rem;
+}
+
+/* === Advanced Search Styles === */
+.search {
+    margin: 15px 0 10px 0;
+}
+
+.advanced-search h4,
+.no-match p {
+    font-size: 1.25rem;
+    margin-bottom: 20px;
+}
+
+.reset-span {
+    color: blue;
+    font-weight: bold;
+    text-decoration: underline;
+    cursor: pointer;
 }
